Adição + atualização
* Adicionando mais valores ao initializer
* Incluindo mais endpoints ao resource do aeroporto
* Atualizando arguments para os DTOs
* Criando métodos ao service do aeroporto
* Criando métodos ao controller do aeroporto
* Criando métodos ao repository do aeroporto
* Refatorando model mapping
* Criando classe excepion