@@ -4,29 +4,30 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
-public class ModelMapping<Entity, Dto> {
+public class ModelMapping<E, D> {
 
     private final ModelMapper modelMapper = new ModelMapper();
 
-    public Dto convertToDto(Entity entity, Class<Dto> dtoClass) {
+    public D convertToDto(E entity, Class<D> dtoClass) {
         return modelMapper.map(entity, dtoClass);
     }
 
-    public Entity convertToEntity(Dto dto, Class<Entity> entityClass) { return modelMapper.map(dto, entityClass); }
-
-    public List<Dto> convertToDtoList(List<Entity> entityList, Class<Dto> dtoClass) {
-        return entityList.stream()
-                .map(entity -> convertToDto(entity, dtoClass))
-                .collect(Collectors.toList());
+    public E convertToEntity(D dto, Class<E> entityClass) {
+        return modelMapper.map(dto, entityClass);
     }
 
-    public List<Entity> convertToEntityList(List<Dto> dtoList, Class<Entity> entityClass) {
+    public List<D> convertToDtoList(List<E> entityList, Class<D> dtoClass) {
+        return entityList.stream()
+                .map(entity -> convertToDto(entity, dtoClass))
+                .toList();
+    }
+
+    public List<E> convertToEntityList(List<D> dtoList, Class<E> entityClass) {
         return dtoList.stream()
                 .map(dto -> convertToEntity(dto, entityClass))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
